<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.enzoruiz.curso3semana2.MainActivity"
    android:orientation="vertical"
    android:layout_marginRight="@dimen/margen"
    android:layout_marginLeft="@dimen/margen"
    android:layout_marginTop="@dimen/margen"
    android:layout_marginBottom="@dimen/margen">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tietNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/default_nombre"/>

    </android.support.design.widget.TextInputLayout>

    <DatePicker
        android:id="@+id/dpFechaNacimiento"
        android:layout_width="match_parent"
        android:layout_height="@dimen/alto_datepicker"
        android:layout_gravity="center_horizontal"></DatePicker>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tietTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/default_telefono"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tietEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/default_email"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tietDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/default_descripcion"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/bSiguiente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/default_siguiente"/>

</LinearLayout>
